# LCEClient

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  COMPILE.md  CONTRIBUTING.md  Compile.md  MinecraftConsoles.sln  README.md  find_case_mismatches.py  fix_all_includes.py  fix_case.py  fix_random.py  fix_slashes.py
Minecraft.Client/: AbstractContainerScreen.cpp  AbstractContainerScreen.h  AbstractProjectileDispenseBehavior.cpp  AbstractProjectileDispenseBehavior.h  AbstractTexturePack.cpp  AchievementPopup.cpp  AchievementScreen.cpp  AchievementScreen.h  ArchiveFile.cpp  ArchiveFile.h  ArrowRenderer.cpp  ArrowRenderer.h  BatModel.cpp  BatRenderer.cpp  BeaconRenderer.cpp  BlazeModel.cpp  BlazeModel.h  BlazeRenderer.cpp  BlazeRenderer.h  BoatModel.cpp  BoatModel.h  BoatRenderer.cpp  BoatRenderer.h  BookModel.cpp  BookModel.h  BossMobGuiInfo.cpp  BreakingItemParticle.cpp  BubbleParticle.cpp  BufferedImage.cpp  CMakeLists.txt  Camera.cpp  Camera.h  ChatScreen.cpp  ChestRenderer.cpp  ChestRenderer.h  ChickenModel.cpp  ChickenModel.h  ChickenRenderer.cpp  ChickenRenderer.h  Chunk.cpp  (+353 more)
Minecraft.Client/Common/: App_enums.h  BuildVer.h  C4JMemoryPoolAllocator.h  ConsoleGameMode.cpp  ConsoleGameMode.h  Console_Utils.cpp  Consoles_App.cpp  Consoles_App.h  PostProcesser.h
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp  SoundEngine.h  stb_vorbis.h
Minecraft.Client/Common/Colours/: ColourTable.cpp
Minecraft.Client/Common/DLC/: DLCAudioFile.cpp  DLCAudioFile.h  DLCColourTableFile.cpp  DLCGameRules.h  DLCGameRulesHeader.cpp  DLCGameRulesHeader.h  DLCLocalisationFile.cpp  DLCManager.cpp  DLCPack.cpp  DLCSkinFile.cpp  DLCSkinFile.h
Minecraft.Client/Common/Filesystem/: Filesystem.cpp
Minecraft.Client/Common/GameRules/: AddEnchantmentRuleDefinition.cpp  AddEnchantmentRuleDefinition.h  AddItemRuleDefinition.cpp  AddItemRuleDefinition.h  ApplySchematicRuleDefinition.cpp  BiomeOverride.cpp  CollectItemRuleDefinition.cpp  CollectItemRuleDefinition.h  CompleteAllRuleDefinition.cpp  CompleteAllRuleDefinition.h  CompoundGameRuleDefinition.cpp  CompoundGameRuleDefinition.h  ConsoleGenerateStructure.cpp  ConsoleGenerateStructure.h  ConsoleSchematicFile.cpp  ConsoleSchematicFile.h  GameRule.cpp  GameRule.h  GameRuleDefinition.cpp  GameRuleDefinition.h  GameRuleManager.cpp  LevelGenerationOptions.cpp  LevelGenerationOptions.h  LevelRuleset.cpp  NamedAreaRuleDefinition.cpp  StartFeature.cpp  StartFeature.h  UpdatePlayerRuleDefinition.cpp  UpdatePlayerRuleDefinition.h  UseTileRuleDefinition.cpp  UseTileRuleDefinition.h  XboxStructureActionGenerateBox.cpp  XboxStructureActionPlaceBlock.cpp  XboxStructureActionPlaceContainer.cpp  XboxStructureActionPlaceSpawner.cpp
Minecraft.Client/Common/Leaderboards/: LeaderboardManager.cpp  SonyLeaderboardManager.cpp  SonyLeaderboardManager.h
Minecraft.Client/Common/Network/: GameNetworkManager.cpp  GameNetworkManager.h  PlatformNetworkManagerInterface.h  PlatformNetworkManagerStub.cpp  PlatformNetworkManagerStub.h  SessionInfo.h
Minecraft.Client/Common/Telemetry/: TelemetryManager.cpp  TelemetryManager.h
Minecraft.Client/Common/Trial/: TrialMode.cpp  TrialMode.h
Minecraft.Client/Common/Tutorial/: AreaConstraint.cpp  AreaHint.cpp  ChangeStateConstraint.cpp  ChoiceTask.cpp  CompleteUsingItemTask.cpp  CompleteUsingItemTask.h  ControllerTask.cpp  CraftTask.cpp  CraftTask.h  DiggerItemHint.cpp  DiggerItemHint.h  EffectChangedTask.cpp  FullTutorial.cpp  FullTutorialMode.cpp  HorseChoiceTask.cpp  InfoTask.cpp  LookAtEntityHint.h  LookAtTileHint.cpp  PickupTask.cpp  PickupTask.h  ProcedureCompoundTask.cpp  ProcedureCompoundTask.h  RideEntityTask.cpp  StatTask.cpp  TakeItemHint.cpp  TakeItemHint.h  Tutorial.cpp  Tutorial.h  TutorialHint.cpp  TutorialHint.h  TutorialMode.cpp  TutorialMode.h  TutorialTask.cpp  TutorialTask.h  UseItemTask.cpp  UseItemTask.h  UseTileTask.cpp  UseTileTask.h  XuiCraftingTask.cpp  XuiCraftingTask.h
Minecraft.Client/Common/UI/: IUIScene_AnvilMenu.cpp  (+130 more)
Minecraft.Client/Durango/: Durango_App.cpp  Durango_Minecraft.cpp  Durango_UIController.h
Minecraft.Client/Linux64/: KeyboardMouseInput.cpp  KeyboardMouseInput.h  Linux64_App.cpp  Linux64_App.h  Linux64_Compat.h  Linux64_IggyGL.cpp  Linux64_Minecraft.cpp  Linux64_Stubs.cpp  Linux64_TextureLoader.cpp  Linux64_UIController.cpp  Linux64_UIController.h  stb_image.h
Minecraft.Client/Orbis/: Orbis_App.cpp  Orbis_App.h  Orbis_Minecraft.cpp  Orbis_PlayerUID.cpp  Orbis_UIController.cpp  Orbis_UIController.h  user_malloc.cpp
Minecraft.Client/PS3/: PS3_App.cpp  PS3_App.h  PS3_Minecraft.cpp  PS3_PlayerUID.cpp  PS3_UIController.cpp  PS3_UIController.h  XboxGameMode.cpp  XboxGameMode.h  Xbox_Minecraft.cpp
Minecraft.Client/PSVita/: PSVita_App.cpp  PSVita_App.h  PSVita_Minecraft.cpp  PSVita_PlayerUID.cpp  PSVita_UIController.cpp  PSVita_UIController.h
Minecraft.Client/Windows64/: KeyboardMouseInput.cpp  KeyboardMouseInput.h  PostProcesser.cpp  Windows64_App.cpp  Windows64_App.h  Windows64_Minecraft.cpp  Windows64_UIController.cpp  Windows64_UIController.h  Windows64_Xuid.h
Minecraft.Client/Xbox/: Xbox_App.cpp  Xbox_Minecraft.cpp  Xbox_UIController.cpp  Xbox_UIController.h
Minecraft.World/: AABB.cpp  AbstractContainerMenu.cpp  AbstractContainerMenu.h  Achievement.cpp  Achievement.h  AddEntityPacket.cpp  AddEntityPacket.h  AddExperienceOrbPacket.cpp  AddExperienceOrbPacket.h  AddGlobalEntityPacket.cpp  AddGlobalEntityPacket.h  AddIslandLayer.cpp  AddIslandLayer.h  AddMobPacket.cpp  AddMobPacket.h  AddMushroomIslandLayer.cpp  AddMushroomIslandLayer.h  AddPaintingPacket.cpp  AddPaintingPacket.h  AddPlayerPacket.cpp  AddPlayerPacket.h  AddSnowLayer.cpp  AddSnowLayer.h  AdminLogCommand.h  AgableMob.cpp  AgableMob.h  Animal.cpp  Animal.h  AnimatePacket.cpp  AnimatePacket.h  AnvilMenu.cpp  AnvilTile.cpp  AnvilTile.h  ArmorDyeRecipe.cpp  ArmorDyeRecipe.h  ArmorItem.cpp  ArmorItem.h  ArmorSlot.cpp  ArmorSlot.h  ArrayWithLength.h  (+929 more)
Minecraft.World/x64_Debug/: Minecraft.World.lib  Minecraft.World.vcxproj.FileListAbsolute.txt
Minecraft.World/x64headers/: extraX64.h
(+680 files in other folders)
